# MongoElasticMigrator

./: Cargo.toml  README.md  config.toml
src/: main.rs
test/: ingestMongo.py
